@@ -1,6 +1,8 @@
 
 # New configuration settings
 
+ * 2.12: LiveSpinner
+
  * 2.11: InterfaceOrder, VacuumOnStartup, VacuumOnHUPSignal
 
  * 2.10: EstimateVisible, EstimateText
