@@ -55,6 +55,9 @@
 # how many seconds should sampling for -tr take by default
 ;Sampletime 5
 
+# show animation at the beginning of -l / --live line (1 = enabled, 0 = disabled)
+;LiveSpinner 1
+
 # default query mode
 # 0 = normal, 1 = days, 2 = months, 3 = top, 5 = short
 # 7 = hours, 8 = xml, 9 = one line, 10 = json
