@@ -120,6 +120,13 @@ Set to 0 to show all entries available in the database.
 (vnstat and vnstati)
 
 .TP
+.B LiveSpinner
+Show spinning animation at the beginning of
+.BR "-l" " /"
+.B "--live"
+output line. 1 = enabled, 0 = disabled. (vnstat only)
+
+.TP
 .B Locale
 Locale setting to be used for prints. This replaces the LC_ALL
 environment variable. Set to "-" or leave empty in order to use the
